--- a/011/views/index.pug
+++ b/011/views/index.pug
@@ -4,4 +4,5 @@ html
     title Learn Pug
   body
     h1 #{title}
-    canvas.canvas#canvas hello
+    canvas#canvas.canvas
+      p this browser dont support html5 canvas 
