--- a/191229-/002/onGame/public/stylesheets/style.css
+++ b/191229-/002/onGame/public/stylesheets/style.css
@@ -3,11 +3,11 @@ body {
   text-align: center;
 }
 
-canvas#rCanvas {
+canvas#rader {
   border-radius: 50px;
   background-color: rgba(00,20,50,1.0);
 }
-canvas#sCanvas {
+canvas#score {
   border-radius: 20px;
   background-color: rgba(250,250,250,1.0);
 }
